Fixed a layout bug in scss

--- a/active-citizen-app/src/app/layout/active-citizens-layout-page/active-citizens-layout-page.component.scss
+++ b/active-citizen-app/src/app/layout/active-citizens-layout-page/active-citizens-layout-page.component.scss
@@ -9,7 +9,7 @@
   }
 }
 
-app-header {
+.app-header {
   top: 0;
   width: 100%;
   position: fixed;
